user-ui initialization
